
2008-05-15  Cedric BAIL

	* Fix a typo preventing the parsing of unsigned int (EET_T_UINT).

	* Fix group of simple type by implicitly creating a structure with
	the simple type in it.

	* Remove dead code handling group of simple type and put assert
	instead.

2008-05-16  Cedric BAIL

	* Fix eet_data_descriptor3_new as it purpose was to introduce
	str_direct_alloc/str_direct_free usage. Application should now receive
	direct pointer to read only (mmaped) string.

	* Fix EET_FILE_MODE_READ_WRITE when file doesn't exist.

	* Fix some miss use of efn->offset.

	* Introduce unit test in EFL. The current set provide an overall
	coverage rate of 2111 of 2607 lines (81.0%) for eet. It helped
	finding and fixing the bugs of the last three days.
	  The test suite is based on library check. At this time we need
	cvs version, look at http://check.sourceforge.net/ to find it.
	  The covering is done by gcov
	  The html report is done by lcov version 1.6 or above.
	You can found it at http://ltp.sourceforge.net/coverage/lcov.php.

2008-05-19  Cedric BAIL

	* Old Eet file format is now marked as deprecated and accessing old
	file will display a warning. You can already remove completely all
	code related to it, but it's still enabled by default. We will later
	disable it by default and at some point drop the support completely.

	* Remove use of strcpy and sprintf definitively.

2008-06-02  Cedric BAIL

	* Introduce tile support and the possibility to decompress eet
	image inside an existing surface.

2008-06-26  Cedric BAIL

	* Massiv code cleanup.
	* Add EET_G_ARRAY and EET_G_VAR_ARRAY support.
	* Plan for version 2.0 API break of eet_data_descriptor_element_add.

2008-07-17  Cedric BAIL

	Implement various speed improvement :

	* Use the precomputed hash value for Eet_Data_Chunk.
	* Use a hash table instead of a list for pointer that need to be freed.
	* Use directly the pointer from the dictionary to do a pointer
	comparison instead of a strcmp.
